# scan-tool

./: .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  ChangeLog.md  appveyor.yml  readme.md
.github/workflows/: alpine.yml  alpine_arm.yml  build-clang.yml  clang.yml  gcc.yml
certificates/: metascan.crt  readme.md
ci/: drone.io.sh
ci/windows/: build.cmd  build_curl.ps1  build_curl.sh  codeblocks_dl_install.ps1  download_dependencies.ps1
cmake/: libjsoncpp-config.cmake  libzip-config.cmake
code/: CMakeLists.txt  Curly.cpp  Curly.hpp  EngineV2.cpp  EngineV2.hpp  Report.cpp  Report.hpp  ReportHoneypot.cpp  ReportHoneypot.hpp  ReportV2.cpp  ReportV2.hpp  Scanner.cpp  Scanner.hpp  ScannerVirusTotal.cpp  ScannerVirusTotal.hpp  ScannerVirusTotalHoneypot.cpp  ScannerVirusTotalHoneypot.hpp  ScannerVirusTotalV2.cpp  ScannerVirusTotalV2.hpp  main.cpp  scan-tool.cbp
playground/: CMakeLists.txt  main.cpp  scan-tool-playground.cbp
playground/honeypottery/: CMakeLists.txt  honeypottery.cbp  main.cpp
script/: scan-tool.sh  vt-apikey.example.conf
source/: CMakeLists.txt  CacheManagerVirusTotalV2.cpp  CacheManagerVirusTotalV2.hpp  Configuration.cpp  Configuration.hpp  Constants.hpp  Curly.cpp  Curly.hpp  Engine.cpp  Engine.hpp  EngineMetascanOnline.hpp  MetascanDefinitions.cpp  MetascanDefintions.cpp  Report.cpp  Report.hpp  ReportMetascanOnline.cpp  ReportMetascanOnline.hpp  ReportV2.cpp  ReportV2.hpp  ReportVirusTotalBase.hpp  ReturnCodes.hpp  Scanner.cpp  Scanner.hpp  ScannerMetascanOnline.cpp  ScannerMetascanOnline.hpp  ScannerVirusTotalHoneypot.cpp  ScannerVirusTotalHoneypot.hpp  ScannerVirusTotalV2.cpp  ScannerVirusTotalV2.hpp  StringToTimeT.cpp  StringToTimeT.hpp
source/honeypottery/: CMakeLists.txt  ChangeLog.md  honeypottery.cbp  main.cpp
source/metascan/: Definitions.cpp  Definitions.hpp  Engine.cpp  Engine.hpp  EngineMetascanOnline.cpp  EngineMetascanOnline.hpp  Report.cpp  Report.hpp  Scanner.cpp  Scanner.hpp  ScannerMetascanOnline.cpp  ScannerMetascanOnline.hpp
source/mso-api-request/: CMakeLists.txt  ChangeLog.md  main.cpp  mso-api-request.cbp
source/scan-tool/: CMakeLists.txt  ChangeLog.md  Handler.hpp  Handler7z.hpp  HandlerAr.hpp  HandlerCab.hpp  HandlerGeneric.hpp  HandlerGzip.cpp  HandlerGzip.hpp  HandlerISO9660.hpp  HandlerInstallShield.hpp  HandlerRar.hpp  HandlerTar.cpp  HandlerTar.hpp  HandlerXz.hpp  ScanStrategy.cpp  ScanStrategy.hpp  ScanStrategyDefault.cpp  ScanStrategyDefault.hpp  ScanStrategyDirectScan.cpp  ScanStrategyDirectScan.hpp  ScanStrategyNoRescan.cpp  ScanStrategyNoRescan.hpp  ScanStrategyScanAndForget.cpp  ScanStrategyScanAndForget.hpp  Strategies.cpp  Strategies.hpp  Version.hpp  ZipHandler.cpp  ZipHandler.hpp  cachetransition.cpp  cachetransition.hpp  main.cpp  scan-tool.cbp  summary.cpp  summary.hpp
source/scan-tool-cache/: CMakeLists.txt  CacheIteration.cpp  CacheIteration.hpp  CacheOperation.hpp  ChangeLog.md  IterationOperation.hpp  IterationOperationStatistics.cpp  IterationOperationStatistics.hpp  IterationOperationUpdate.cpp  IterationOperationUpdate.hpp  main.cpp  scan-tool-cache.cbp
source/scan-tool-mso/: CMakeLists.txt  ChangeLog.md  main.cpp  scan-tool-mso.cbp  summary.cpp  summary.hpp
source/virustotal/: CacheManagerV2.cpp  CacheManagerV2.hpp  EngineV2.cpp  EngineV2.hpp  ReportBase.cpp  ReportBase.hpp  ReportHoneypot.cpp  ReportHoneypot.hpp  ReportV2.cpp  ReportV2.hpp  ReportVirusTotalBase.cpp  ReportVirusTotalBase.hpp  ScannerHoneypot.cpp  ScannerHoneypot.hpp  ScannerV2.cpp  ScannerV2.hpp  ScannerVirusTotalHoneypot.cpp  ScannerVirusTotalHoneypot.hpp  ScannerVirusTotalV2.cpp  ScannerVirusTotalV2.hpp
source/vt-api-request/: CMakeLists.txt  ChangeLog.md  main.cpp  vt-api-request.cbp
test/: CMakeLists.txt
test/configuration/: CMakeLists.txt  load_configuration.cbp  main.cpp
test/curly/: CMakeLists.txt  curly.cbp  main.cpp
test/curly-headers/: CMakeLists.txt  curly-headers.cbp  main.cpp
test/curly-version/: CMakeLists.txt  curly-version.cbp  main.cpp
test/curly/headers/: CMakeLists.txt  curly-headers.cbp  headers.cpp
test/curly/post/: CMakeLists.txt  curly-post.cbp  post.cpp
test/curly/post-body/: CMakeLists.txt  curly-post-body.cbp  post-body.cpp
test/curly/post-file/: CMakeLists.txt  curly-post-file.cbp  post-file.cpp
test/curly/protocol-support/: CMakeLists.txt  curly-protocol-support.cbp  protocol-support.cpp
test/curly/response-headers/: CMakeLists.txt  response-headers.cbp  response-headers.cpp
test/curly/status-code/: CMakeLists.txt  status-code.cbp  status-code.cpp
test/curly/version/: CMakeLists.txt  curly-version.cbp  version.cpp
test/date/: CMakeLists.txt
test/date/string-to-time-t/: CMakeLists.txt  main.cpp  string-to-time-t.cbp
test/executables/: CMakeLists.txt
test/executables/honeypottery/: CMakeLists.txt
test/executables/mso-api-request/: CMakeLists.txt
test/executables/scan-tool/: CMakeLists.txt
test/executables/scan-tool-cache/: CMakeLists.txt
test/executables/vt-api-request/: CMakeLists.txt
test/honeypottery/: CMakeLists.txt
test/parser/: CMakeLists.txt
test/parser/honeypot/: CMakeLists.txt  HoneypotAPI.json  main.cpp  parser-vt-honeypot.cbp
test/parser/mso/: CMakeLists.txt  Metascan.json  main.cpp  parser-mso.cbp
test/parser/vt-v2/: CMakeLists.txt  ScanResponse.json  main.cpp  parser-vt-v2.cbp
test/scan-tool/: CMakeLists.txt
test/scan-tool-cache/: CMakeLists.txt
